--- a/web/themes/custom/pcc/pcc.info.yml
+++ b/web/themes/custom/pcc/pcc.info.yml
@@ -1,19 +1,19 @@
 name: "Portsmouth City Council"
-description: "Your sub-theme, which uses localgov_base as its base theme."
+description: "PCC theme using localgov_base as its base theme."
 type: theme
 core_version_requirement: ^10 || ^11
 base theme: "localgov_base"
 
+# Extend these base theme libraries with our own.
 libraries-extend:
-  # Add libraries that you want to load on every page of your site to the list
-  # of those extending localgov_base/global
   localgov_base/global:
     - pcc/variables
-    # - pcc/other-library-to-load-on-every-page
-    # - pcc/other-library-to-load-on-every-page
-  # Add libraries here that extend specific libraries.
-  # localgov_base/sample-library:
-    # - pcc/sample-library
+  localgov_base/header:
+    - pcc/header
+
+# Replace these base theme libraries with our own.
+libraries-override:
+  localgov_base/menu-main: pcc/menu-main
 
 regions:
   tabs: "Tabs"
