--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -4,8 +4,7 @@ variables:
       # This is called in your pcc.info.yml file via `libraries-extend`.
       # This ensures that in the cascade, your variables come after the base theme's
       # variables.
-      css/variables.css: {}
-
+      css/base/variables.css: {}
 # To override CSS from the base theme, add your library here, and then use
 # `libraries-extend` to add that code to the library from the base theme. See the
 # pcc.info.yml file for an example, using this `sample-library`.
@@ -23,3 +22,12 @@ variables:
 #   css:
 #     theme:
 #       css/sample.css: {}
+header:
+  css:
+    theme:
+      css/components/header.css: {}
+
+menu-main:
+  css:
+    theme:
+      css/components/menu-main.css: {}
