--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -1,10 +1,11 @@
-variables:
+# This is called in your pcc.info.yml file via `libraries-extend`.
+# This ensures that in the cascade, your variables come after the base theme's
+# variables.
+global:
   css:
     base:
-      # This is called in your pcc.info.yml file via `libraries-extend`.
-      # This ensures that in the cascade, your variables come after the base theme's
-      # variables.
-      css/base/variables.css: {}
+      css/base/colours.css: {}
+      css/base/fonts.css: {}
 # To override CSS from the base theme, add your library here, and then use
 # `libraries-extend` to add that code to the library from the base theme. See the
 # pcc.info.yml file for an example, using this `sample-library`.
