--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -4,8 +4,8 @@
 global:
   css:
     base:
-      css/base/colours.css: {}
       css/base/fonts.css: {}
+      css/base/variables.css: {}
 # To override CSS from the base theme, add your library here, and then use
 # `libraries-extend` to add that code to the library from the base theme. See the
 # pcc.info.yml file for an example, using this `sample-library`.
