--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -23,6 +23,11 @@ global:
 #   css:
 #     theme:
 #       css/sample.css: {}
+banner:
+  css:
+    theme:
+      css/components/banner.css: {}
+
 header:
   css:
     theme:
