--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "cweagans/composer-patches": "^1.6",
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/formdazzle": "^4.0",
+        "drupal/twig_tweak": "^3.4",
         "localgovdrupal/localgov": "^3.0",
         "localgovdrupal/localgov_search_solr": "^1.1",
         "wikimedia/composer-merge-plugin": "^2.1"
