--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -28,6 +28,11 @@ banner:
     theme:
       css/components/banner.css: {}
 
+footer:
+  css:
+    theme:
+      css/components/footer.css: {}
+
 header:
   css:
     theme:
@@ -38,7 +43,7 @@ menu-main:
     theme:
       css/components/menu-main.css: {}
 
-footer:
+service-cta-block:
   css:
     theme:
-      css/components/footer.css: {}
+      css/components/service-cta-block.css: {}
