--- a/web/themes/custom/pcc/pcc.info.yml
+++ b/web/themes/custom/pcc/pcc.info.yml
@@ -10,6 +10,8 @@ favicon: "assets/images/favicons/favicon-32x32.png"
 libraries-extend:
   localgov_base/banner:
     - pcc/banner
+  localgov_base/breadcrumbs:
+    - pcc/breadcrumbs
   localgov_base/footer:
     - pcc/footer
   localgov_base/global:
