--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -49,6 +49,11 @@ menu-main:
     theme:
       css/components/menu-main.css: {}
 
+page-title-block:
+  css:
+    theme:
+      css/components/page-title-block.css: {}
+
 service-cta-block:
   css:
     theme:
