--- a/config/sync/block.block.pcc_views_block__services_block_service_list_scarfolk.yml
+++ b/config/sync/block.block.pcc_views_block__services_block_service_list_scarfolk.yml
@@ -1,6 +1,6 @@
 uuid: 79d27bc8-0bc7-4fa5-a8c7-1addeca74114
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.services
@@ -13,13 +13,13 @@ _core:
   default_config_hash: dIZQveClXGuKNNnnZIszG9I_DBPhQp4eMCPkbYqVkOg
 id: pcc_views_block__services_block_service_list_scarfolk
 theme: pcc
-region: disabled
-weight: 5
+region: content_top
+weight: -16
 provider: null
 plugin: 'views_block:services-block_service_list'
 settings:
   id: 'views_block:services-block_service_list'
-  label: 'Services list block'
+  label: ''
   label_display: '0'
   provider: views
   views_label: ''
