--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -151,12 +151,14 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  twig_tweak: 0
   update: 0
   user: 0
   views_ui: 0
   viewsreference: 0
   workflows: 0
   pathauto: 1
+  formdazzle: 10
   views: 10
   paragraphs: 11
   localgov: 1000
