--- a/config/sync/field.field.node.localgov_subsites_overview.localgov_subsites_banner.yml
+++ b/config/sync/field.field.node.localgov_subsites_overview.localgov_subsites_banner.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.localgov_subsites_banner
     - node.type.localgov_subsites_overview
+    - paragraphs.paragraphs_type.banner_home_page
     - paragraphs.paragraphs_type.localgov_banner_primary
     - paragraphs.paragraphs_type.localgov_banner_secondary
   module:
@@ -24,114 +25,130 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    negate: 0
     target_bundles:
+      banner_home_page: banner_home_page
       localgov_banner_primary: localgov_banner_primary
       localgov_banner_secondary: localgov_banner_secondary
+    negate: 0
     target_bundles_drag_drop:
+      banner_home_page:
+        weight: -80
+        enabled: true
       from_library:
-        weight: -71
+        weight: -81
         enabled: false
       localgov_accordion:
-        weight: -68
+        weight: -77
         enabled: false
       localgov_accordion_pane:
-        weight: -67
+        weight: -76
         enabled: false
       localgov_banner_primary:
+        weight: -79
         enabled: true
-        weight: -70
       localgov_banner_secondary:
+        weight: -78
         enabled: true
-        weight: -69
       localgov_block_view:
-        weight: -66
+        weight: -75
         enabled: false
       localgov_box_link:
-        weight: -65
+        weight: -74
         enabled: false
       localgov_box_links_listing:
-        weight: -64
+        weight: -73
         enabled: false
       localgov_call_out_box:
-        weight: -63
+        weight: -72
         enabled: false
       localgov_contact:
-        weight: -62
+        weight: -71
         enabled: false
       localgov_documents:
-        weight: -61
+        weight: -70
         enabled: false
       localgov_fact_box:
-        weight: -60
+        weight: -69
         enabled: false
-      localgov_featured_subsite:
-        weight: -59
-        enabled: false
-      localgov_featured_teaser:
-        weight: -58
-        enabled: false
-      localgov_featured_teasers:
-        weight: -57
-        enabled: false
-      localgov_ia_block:
-        weight: -56
-        enabled: false
-      localgov_image:
-        weight: -55
-        enabled: false
-      localgov_key_contact_item:
-        weight: -53
-        enabled: false
-      localgov_key_contacts:
-        weight: -54
-        enabled: false
-      localgov_key_fact:
-        weight: -52
-        enabled: false
-      localgov_key_facts:
-        weight: -51
-        enabled: false
-      localgov_labelled_icon:
-        weight: -50
-        enabled: false
-      localgov_link:
-        weight: -49
-        enabled: false
-      localgov_link_and_summary:
-        weight: -48
-        enabled: false
-      localgov_media_with_text:
-        weight: -47
-        enabled: false
-      localgov_newsroom_teaser:
-        weight: -46
-        enabled: false
-      localgov_quote:
+      localgov_featured_campaign:
         weight: -45
         enabled: false
-      localgov_subscribe_panel:
+      localgov_featured_subsite:
+        weight: -68
+        enabled: false
+      localgov_featured_teaser:
+        weight: -67
+        enabled: false
+      localgov_featured_teasers:
+        weight: -66
+        enabled: false
+      localgov_ia_block:
+        weight: -65
+        enabled: false
+      localgov_image:
+        weight: -64
+        enabled: false
+      localgov_key_contact_item:
+        weight: -62
+        enabled: false
+      localgov_key_contacts:
+        weight: -63
+        enabled: false
+      localgov_key_fact:
+        weight: -61
+        enabled: false
+      localgov_key_facts:
+        weight: -60
+        enabled: false
+      localgov_labelled_icon:
+        weight: -59
+        enabled: false
+      localgov_link:
+        weight: -58
+        enabled: false
+      localgov_link_and_summary:
+        weight: -57
+        enabled: false
+      localgov_media_with_text:
+        weight: -56
+        enabled: false
+      localgov_newsroom_teaser:
+        weight: -55
+        enabled: false
+      localgov_numbered_text:
         weight: -44
         enabled: false
-      localgov_tab_panel:
-        weight: -41
-        enabled: false
-      localgov_table:
+      localgov_page_section:
         weight: -43
         enabled: false
-      localgov_tabs:
+      localgov_publications_banner:
         weight: -42
         enabled: false
+      localgov_quote:
+        weight: -54
+        enabled: false
+      localgov_subscribe_panel:
+        weight: -53
+        enabled: false
+      localgov_tab_panel:
+        weight: -50
+        enabled: false
+      localgov_table:
+        weight: -52
+        enabled: false
+      localgov_tabs:
+        weight: -51
+        enabled: false
       localgov_text:
-        weight: -40
+        weight: -49
         enabled: false
       localgov_video:
-        weight: -39
+        weight: -48
         enabled: false
       page_section:
-        weight: -38
+        weight: -47
         enabled: false
       topic_list_builder:
-        weight: -37
+        weight: -46
         enabled: false
 field_type: entity_reference_revisions
