--- a/config/sync/fontawesome.settings.yml
+++ b/config/sync/fontawesome.settings.yml
@@ -3,18 +3,18 @@ _core:
 tag: i
 method: webfonts
 load_assets: true
-use_cdn: true
+use_cdn: false
 external_svg_location: 'https://use.fontawesome.com/releases/v5.13.0/css/all.css'
 use_shim: false
 external_shim_location: 'https://use.fontawesome.com/releases/v6.4.2/js/v4-shims.js'
-allow_pseudo_elements: true
+allow_pseudo_elements: false
 use_solid_file: true
 use_regular_file: true
 use_light_file: true
 use_brands_file: true
 use_duotone_file: true
 use_thin_file: true
-external_svg_integrity: null
+external_svg_integrity: ''
 bypass_validation: false
 use_sharpregular_file: true
 use_sharplight_file: true
