--- a/config/sync/views.view.latest_news.yml
+++ b/config/sync/views.view.latest_news.yml
@@ -1,17 +1,15 @@
-uuid: 67d46ad8-4465-4fc0-a8e3-69849b35b355
+uuid: 3a03c060-d434-42ea-9d9e-3880553d7df4
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - node.type.localgov_services_landing
+    - node.type.localgov_news_article
   module:
     - node
     - user
-_core:
-  default_config_hash: nLqAVF5mRMV8ghdHzW4NnBt6AeXb7G1P4N8_tfAMRx8
-id: services
-label: Services
+id: latest_news
+label: 'Latest news'
 module: views
 description: ''
 tag: ''
@@ -20,11 +18,11 @@ base_field: nid
 display:
   default:
     id: default
-    display_title: Master
+    display_title: Default
     display_plugin: default
     position: 0
     display_options:
-      title: 'Services and information'
+      title: 'Latest news'
       fields:
         title:
           id: title
@@ -74,10 +72,10 @@ display:
           separator: ', '
           field_api_classes: false
       pager:
-        type: none
+        type: some
         options:
           offset: 0
-          items_per_page: 0
+          items_per_page: 3
       exposed_form:
         type: basic
         options:
@@ -110,6 +108,7 @@ display:
           order: DESC
           expose:
             label: ''
+            field_identifier: ''
           exposed: false
           granularity: second
       arguments: {  }
@@ -125,50 +124,15 @@ display:
           group: 1
           expose:
             operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
         type:
           id: type
           table: node_field_data
           field: type
-          relationship: none
-          group_type: group
-          admin_label: ''
           entity_type: node
           entity_field: type
           plugin_id: bundle
-          operator: in
           value:
-            localgov_services_landing: localgov_services_landing
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
+            localgov_news_article: localgov_news_article
       style:
         type: grid_responsive
         options:
@@ -190,7 +154,6 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
-      css_class: 'view--teasers lgd-teaser-list'
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -202,8 +165,8 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-  block_service_list:
-    id: block_service_list
+  block_1:
+    id: block_1
     display_title: Block
     display_plugin: block
     position: 1
@@ -212,22 +175,6 @@ display:
         localgov_page_header_display_extender:
           lede: ''
           tokenize: false
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - 'user.node_grants:view'
-        - user.permissions
-      tags: {  }
-  page_1:
-    id: page_1
-    display_title: Page
-    display_plugin: page
-    position: 1
-    display_options:
-      display_extenders: {  }
-      path: services
     cache_metadata:
       max-age: -1
       contexts:
