--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -69,3 +69,8 @@ step-by-step:
   css:
     theme:
       css/components/step-by-step.css: {}
+
+teaser:
+  css:
+    theme:
+      css/components/teaser.css: {}
