Teasers, sidebar, blocks

--- a/config/sync/core.entity_view_display.node.localgov_news_article.default.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.default.yml
@@ -10,10 +10,13 @@ dependencies:
     - field.field.node.localgov_news_article.localgov_news_date
     - field.field.node.localgov_news_article.localgov_news_related
     - field.field.node.localgov_news_article.localgov_newsroom
+    - image.style.wide
     - node.type.localgov_news_article
   module:
     - datetime
     - entity_reference_facet_link
+    - field_formatter_class
+    - media
     - text
     - user
   enforced:
@@ -31,12 +34,30 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 3
+    weight: 5
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: 0
+    region: content
+  field_media_image:
+    type: media_thumbnail
+    label: hidden
+    settings:
+      image_link: ''
+      image_style: wide
+      image_loading:
+        attribute: lazy
+    third_party_settings:
+      field_formatter_class:
+        class: ''
+    weight: 2
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
   localgov_news_categories:
     type: entity_reference_facet_link
@@ -44,7 +65,7 @@ content:
     settings:
       facet: localgov_news_category
     third_party_settings: {  }
-    weight: 2
+    weight: 4
     region: content
   localgov_news_date:
     type: datetime_custom
@@ -53,7 +74,7 @@ content:
       timezone_override: ''
       date_format: 'j F Y'
     third_party_settings: {  }
-    weight: 1
+    weight: 3
     region: content
   localgov_news_related:
     type: entity_reference_entity_view
@@ -62,9 +83,8 @@ content:
       view_mode: teaser
       link: false
     third_party_settings: {  }
-    weight: 4
+    weight: 6
     region: content
 hidden:
-  field_media_image: true
   localgov_newsroom: true
   search_api_excerpt: true
