--- a/config/sync/views.view.latest_news.yml
+++ b/config/sync/views.view.latest_news.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.localgov_card
     - field.storage.node.body
     - field.storage.node.field_media_image
     - field.storage.node.localgov_news_date
@@ -345,7 +345,7 @@ display:
         type: 'entity:node'
         options:
           relationship: none
-          view_mode: teaser
+          view_mode: localgov_card
       query:
         type: views_query
         options:
