--- a/config/sync/core.entity_view_display.node.localgov_news_article.localgov_card.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.localgov_card.yml
@@ -26,11 +26,17 @@ bundle: localgov_news_article
 mode: localgov_card
 content:
   body:
-    type: text_default
+    type: text_summary_or_trimmed
     label: hidden
-    settings: {  }
+    settings:
+      trim_length: 600
     third_party_settings: {  }
     weight: 1
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
     region: content
   field_media_image:
     type: entity_reference_entity_view
