--- a/config/sync/filter.format.email_html.yml
+++ b/config/sync/filter.format.email_html.yml
@@ -1,10 +1,27 @@
 uuid: 8ea04599-7d97-4364-8aaa-cc226e2558df
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - localgov_publications
+    - token_filter
 _core:
   default_config_hash: 8UYEKlWeJ8cK8V-9ojit-_9SwBjQKk0SU-UkiuvlWKI
 name: 'Email HTML'
 format: email_html
 weight: 10
-filters: {  }
+filters:
+  localgov_publications_heading_ids:
+    id: localgov_publications_heading_ids
+    provider: localgov_publications
+    status: false
+    weight: 10
+    settings:
+      keep_existing_ids: false
+  token_filter:
+    id: token_filter
+    provider: token_filter
+    status: true
+    weight: 0
+    settings:
+      replace_empty: false
