--- a/config/sync/filter.format.plain_text.yml
+++ b/config/sync/filter.format.plain_text.yml
@@ -1,7 +1,10 @@
 uuid: dd71c325-f3da-442d-8815-463999a3df93
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - localgov_publications
+    - token_filter
 _core:
   default_config_hash: JLMwODO0epnA_H-jFlH9ezVfa5YBJniRv3MmLqYNl_Q
 name: 'Plain text'
@@ -27,3 +30,17 @@ filters:
     weight: 0
     settings:
       filter_url_length: 72
+  localgov_publications_heading_ids:
+    id: localgov_publications_heading_ids
+    provider: localgov_publications
+    status: false
+    weight: 10
+    settings:
+      keep_existing_ids: false
+  token_filter:
+    id: token_filter
+    provider: token_filter
+    status: true
+    weight: 0
+    settings:
+      replace_empty: false
