--- a/config/sync/views.view.localgov_directory_channel.yml
+++ b/config/sync/views.view.localgov_directory_channel.yml
@@ -123,7 +123,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Search
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -726,7 +726,10 @@ display:
         type: search_api_none
       defaults:
         cache: false
-      display_extenders: {  }
+      display_extenders:
+        localgov_page_header_display_extender:
+          lede: ''
+          tokenize: false
     cache_metadata:
       max-age: -1
       contexts:
