--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -7,6 +7,7 @@ global:
       css/base/base.css: {}
       css/base/fonts.css: {}
       css/base/variables.css: {}
+      css/components/button.css: {}
       css/components/form-items.css: {}
 # To override CSS from the base theme, add your library here, and then use
 # `libraries-extend` to add that code to the library from the base theme. See the
@@ -64,6 +65,11 @@ page-title-block:
   css:
     theme:
       css/components/page-title-block.css: {}
+
+secondary-menu:
+  css:
+    theme:
+      css/components/secondary-menu.css: {}
 
 service-cta-block:
   css:
