--- a/config/sync/core.entity_form_display.node.localgov_subsites_overview.default.yml
+++ b/config/sync/core.entity_form_display.node.localgov_subsites_overview.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.localgov_subsites_overview.localgov_common_tasks
     - field.field.node.localgov_subsites_overview.localgov_services_parent
     - field.field.node.localgov_subsites_overview.localgov_subsites_banner
     - field.field.node.localgov_subsites_overview.localgov_subsites_content
@@ -10,9 +11,13 @@ dependencies:
     - field.field.node.localgov_subsites_overview.localgov_subsites_summary
     - field.field.node.localgov_subsites_overview.localgov_subsites_theme
     - node.type.localgov_subsites_overview
+    - workflows.workflow.localgov_editorial
   module:
+    - content_moderation
     - field_group
     - layout_paragraphs
+    - localgov_review_date
+    - localgov_services
     - paragraphs
     - path
 third_party_settings:
@@ -21,11 +26,12 @@ third_party_settings:
       children:
         - group_description
         - group_banner
+        - group_top_tasks
         - group_page_builder
       label: tabs
       region: content
       parent_name: ''
-      weight: 0
+      weight: 1
       format_type: tabs
       format_settings:
         classes: ''
@@ -34,9 +40,9 @@ third_party_settings:
         width_breakpoint: 1138
     group_description:
       children:
+        - localgov_services_parent
         - title
         - localgov_subsites_summary
-        - localgov_services_parent
       label: Description
       region: content
       parent_name: group_tabs
@@ -70,7 +76,7 @@ third_party_settings:
       label: 'Page builder'
       region: content
       parent_name: group_tabs
-      weight: 11
+      weight: 12
       format_type: tab
       format_settings:
         classes: ''
@@ -78,6 +84,22 @@ third_party_settings:
         formatter: closed
         description: ''
         required_fields: false
+    group_top_tasks:
+      children:
+        - localgov_common_tasks
+      label: 'Top tasks'
+      region: hidden
+      parent_name: group_tabs
+      weight: 11
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
 _core:
   default_config_hash: Wq-JECCuKy2Wd0Zl9RCrGR0Qae4wDOaxyCMlPUBfXLM
 id: node.localgov_subsites_overview.default
@@ -87,9 +109,33 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 5
     region: content
     settings: {  }
+    third_party_settings: {  }
+  localgov_common_tasks:
+    type: link_with_type
+    weight: 11
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  localgov_review_date:
+    type: review_date
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  localgov_service_contacts:
+    type: entity_reference_autocomplete
+    weight: 12
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   localgov_services_parent:
     type: entity_reference_autocomplete
@@ -118,9 +164,12 @@ content:
     weight: 34
     region: content
     settings:
+      view_mode: default
       preview_view_mode: default
+      form_display_mode: default
       nesting_depth: 0
       require_layouts: 1
+      empty_message: ''
     third_party_settings: {  }
   localgov_subsites_hide_menu:
     type: boolean_checkbox
@@ -149,15 +198,21 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 11
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 6
+    weight: 7
     region: content
     settings:
       display_label: true
@@ -169,14 +224,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 1
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 7
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -191,7 +246,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -200,7 +255,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
