--- a/config/sync/core.entity_view_display.node.localgov_subsites_overview.teaser.yml
+++ b/config/sync/core.entity_view_display.node.localgov_subsites_overview.teaser.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.localgov_subsites_overview.localgov_common_tasks
     - field.field.node.localgov_subsites_overview.localgov_services_parent
     - field.field.node.localgov_subsites_overview.localgov_subsites_banner
     - field.field.node.localgov_subsites_overview.localgov_subsites_content
@@ -20,6 +21,11 @@ targetEntityType: node
 bundle: localgov_subsites_overview
 mode: teaser
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   localgov_subsites_summary:
     type: basic_string
     label: hidden
@@ -29,6 +35,7 @@ content:
     region: content
 hidden:
   links: true
+  localgov_common_tasks: true
   localgov_services_parent: true
   localgov_subsites_banner: true
   localgov_subsites_content: true
