--- a/config/sync/field.field.node.localgov_subsites_overview.localgov_subsites_content.yml
+++ b/config/sync/field.field.node.localgov_subsites_overview.localgov_subsites_content.yml
@@ -18,6 +18,7 @@ dependencies:
     - paragraphs.paragraphs_type.localgov_key_contacts
     - paragraphs.paragraphs_type.localgov_key_facts
     - paragraphs.paragraphs_type.localgov_labelled_icon
+    - paragraphs.paragraphs_type.localgov_link
     - paragraphs.paragraphs_type.localgov_link_and_summary
     - paragraphs.paragraphs_type.localgov_media_with_text
     - paragraphs.paragraphs_type.localgov_newsroom_teaser
@@ -56,6 +57,7 @@ settings:
       localgov_documents: localgov_documents
       localgov_featured_teasers: localgov_featured_teasers
       localgov_image: localgov_image
+      localgov_link: localgov_link
       localgov_link_and_summary: localgov_link_and_summary
       localgov_media_with_text: localgov_media_with_text
       localgov_quote: localgov_quote
@@ -74,123 +76,123 @@ settings:
     negate: 0
     target_bundles_drag_drop:
       banner_home_page:
-        weight: 41
+        weight: -51
         enabled: false
       from_library:
-        weight: -20
+        weight: -69
         enabled: false
       localgov_accordion:
-        weight: -35
+        weight: -80
         enabled: true
       localgov_accordion_pane:
-        weight: -24
+        weight: -71
         enabled: false
       localgov_banner_primary:
-        weight: 45
+        weight: -50
         enabled: false
       localgov_banner_secondary:
-        weight: 46
+        weight: -49
         enabled: false
       localgov_block_view:
-        weight: -34
+        weight: -79
         enabled: true
       localgov_box_link:
-        weight: -34
+        weight: -78
         enabled: true
       localgov_box_links_listing:
-        weight: -28
+        weight: -76
         enabled: true
       localgov_call_out_box:
-        weight: -27
+        weight: -75
         enabled: true
       localgov_contact:
-        weight: -19
+        weight: -68
         enabled: false
       localgov_documents:
-        weight: -26
+        weight: -73
         enabled: true
       localgov_fact_box:
-        weight: 53
+        weight: -48
         enabled: false
       localgov_featured_campaign:
-        weight: 54
+        weight: -47
         enabled: false
       localgov_featured_subsite:
-        weight: 23
+        weight: -57
         enabled: true
       localgov_featured_teaser:
-        weight: -29
+        weight: -77
         enabled: false
       localgov_featured_teasers:
-        weight: -25
+        weight: -72
         enabled: true
       localgov_ia_block:
-        weight: 21
+        weight: -58
         enabled: true
       localgov_image:
-        weight: 4
+        weight: -67
         enabled: true
       localgov_key_contact_item:
-        weight: 34
+        weight: -52
         enabled: false
       localgov_key_contacts:
-        weight: 33
+        weight: -53
         enabled: true
       localgov_key_fact:
-        weight: -40
+        weight: -81
         enabled: false
       localgov_key_facts:
-        weight: -27
+        weight: -74
         enabled: true
       localgov_labelled_icon:
-        weight: 23
+        weight: -56
         enabled: true
       localgov_link:
-        weight: 65
-        enabled: false
+        weight: -66
+        enabled: true
       localgov_link_and_summary:
-        weight: 5
+        weight: -65
         enabled: true
       localgov_media_with_text:
-        weight: 6
+        weight: -64
         enabled: true
       localgov_newsroom_teaser:
-        weight: 26
+        weight: -55
         enabled: true
       localgov_numbered_text:
-        weight: 69
+        weight: -46
         enabled: false
       localgov_page_section:
-        weight: 70
+        weight: -45
         enabled: true
       localgov_publications_banner:
-        weight: 71
+        weight: -44
         enabled: false
       localgov_quote:
-        weight: 7
+        weight: -63
         enabled: true
       localgov_subscribe_panel:
-        weight: 29
+        weight: -54
         enabled: true
       localgov_tab_panel:
-        weight: -23
+        weight: -70
         enabled: false
       localgov_table:
-        weight: 8
+        weight: -62
         enabled: true
       localgov_tabs:
-        weight: 9
+        weight: -61
         enabled: true
       localgov_text:
-        weight: 10
+        weight: -60
         enabled: true
       localgov_video:
-        weight: 11
+        weight: -59
         enabled: true
       page_section:
-        weight: 100
+        weight: -42
         enabled: true
       topic_list_builder:
-        weight: 80
+        weight: -43
         enabled: false
 field_type: entity_reference_revisions
