--- a/config/sync/views.view.taxonomy_term.yml
+++ b/config/sync/views.view.taxonomy_term.yml
@@ -213,12 +213,13 @@ display:
             default_group_multiple: {  }
             group_items: {  }
       style:
-        type: default
+        type: grid_responsive
         options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
           uses_fields: false
+          columns: 1
+          cell_min_width: 100
+          grid_gutter: 32
+          alignment: horizontal
       row:
         type: 'entity:node'
         options:
@@ -306,7 +307,10 @@ display:
       query:
         type: views_query
         options: {  }
-      display_extenders: {  }
+      display_extenders:
+        localgov_page_header_display_extender:
+          lede: ''
+          tokenize: false
       path: taxonomy/term/%
     cache_metadata:
       max-age: -1
