--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -27,6 +27,11 @@ global:
 #   css:
 #     theme:
 #       css/sample.css: {}
+alert-banner:
+  css:
+    theme:
+      css/components/alert-banner.css: {}
+
 banner:
   css:
     theme:
