--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -52,6 +52,11 @@ card:
     theme:
       css/components/card.css: {}
 
+featured-teasers:
+  css:
+    theme:
+      css/components/featured-teasers.css: {}
+
 footer:
   css:
     theme:
