--- a/web/themes/custom/pcc/pcc.info.yml
+++ b/web/themes/custom/pcc/pcc.info.yml
@@ -42,6 +42,8 @@ libraries-extend:
     - pcc/step-by-step
   localgov_base/teaser:
     - pcc/teaser
+  localgov_news/localgov-newsroom:
+    - pcc/featured-teasers
   views/views.responsive-grid:
     - pcc/views.responsive-grid
 
