--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,12 @@
-##
-# Managed by https://github.com/localgovdrupal/github_workflow_manager
----
-name: Test localgovdrupal/localgov-project project
+name: Test project
 
 on:
   push:
     branches:
-      - '3.x'
+      - '6-test-action'
   pull_request:
     branches:
-      - '3.x'
+      - '6-test-action'
   schedule:
     - cron: '0 7 * * *'
   workflow_dispatch:
@@ -38,28 +35,6 @@ jobs:
           - '8.3'
 
     steps:
-      - name: Save git branch and git repo names to env if this is not a pull request
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "GIT_BASE=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-          echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-          echo "GIT_REPO=${GITHUB_REPOSITORY}" >> $GITHUB_ENV
-
-      - name: Save git branch and git repo names to env if this is a pull request
-        if: github.event_name == 'pull_request'
-        run: |
-          echo "GIT_BASE=${GITHUB_BASE_REF}" >> $GITHUB_ENV
-          echo "GIT_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_ENV
-          echo "GIT_REPO=${{ github.event.pull_request.head.repo.full_name }}" >> $GITHUB_ENV
-
-      - name: Set composer branch reference for version branches
-        if: endsWith(github.ref, '.x')
-        run: echo "COMPOSER_REF=${GIT_BRANCH}-dev" >> $GITHUB_ENV
-
-      - name: Set composer branch reference for non-version branches
-        if: endsWith(github.ref, '.x') == false
-        run: echo "COMPOSER_REF=dev-${GIT_BRANCH}" >> $GITHUB_ENV
-
       - name: Cached workspace
         uses: actions/cache@v4
         with:
@@ -71,17 +46,13 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
 
-      - name: Clone drupal_container
+      - name: Check out project
         uses: actions/checkout@v4
         with:
-          repository: localgovdrupal/drupal-container
-          ref: php${{ matrix.php-version }}
+          path: html
 
-      - name: Create LocalGov Drupal project
-        run: composer create-project --stability dev localgovdrupal/localgov-project:${COMPOSER_REF} ./html
-
-      - name: Obtain all dev dependencies for LocalGov Drupal
-        run: jq --raw-output '.packages[] | select(.name | startswith("localgovdrupal/")) | ."require-dev" | values | to_entries[] | @sh "\(.key):\(.value)"' ./html/composer.lock | sort | uniq | xargs composer --working-dir=./html require --dev --no-interaction
+      - name: Install composer dependencies
+        uses: php-actions/composer@v6
 
   phpcs:
     name: Coding standards checks
