--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
     branches:
       - '6-test-action'
-  schedule:
-    - cron: '0 7 * * *'
+  # schedule:
+    # - cron: '0 7 * * *'
   workflow_dispatch:
 
 env:
