Adjust Composer commands to target 'html' directory
Update workflow to validate and install Composer dependencies in the 'html' directory.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,10 +51,14 @@ jobs:
           php-version: ${{ matrix.php-version }}
 
       - name: Validate composer.json and composer.lock
-        run: composer validate --strict
+        run: |
+          cd html
+          composer validate --strict
             
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: |
+          cd html
+          composer install --prefer-dist --no-progress --no-suggest
 
   phpcs:
     name: Coding standards checks
