--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Set up DDEV
         uses: ddev/github-action-setup-ddev@v1
 
+      - run: ddev
+
       - name: Install composer dependencies
-        run: ddev composer install
+        run: ddev composer install --no-progress
 
       - name: Check PHP coding standards
         run: ddev phpcs web/themes/custom/pcc --ignore=web/themes/custom/pcc/node_modules
