--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,7 @@ jobs:
       - name: Install composer dependencies
         run: ddev composer install --no-progress
 
+      - run: ddev
+
       - name: Check PHP coding standards
         run: ddev phpcs web/themes/custom/pcc --ignore=web/themes/custom/pcc/node_modules
